Re-edited to fix on smaller screens

--- a/web/stylesheet.css
+++ b/web/stylesheet.css
@@ -42,12 +42,14 @@ padding: 20px;
 
 .body{
 background-color: white;
+width: 1000px;
+height: 1500px;
 }
 
 table.box-left{
 position:relative;
 top:-500px;
-left: 50px;
+left: 20px;
 color:white;
 border-width: medium;
 border-color: grey;
@@ -59,7 +61,7 @@ padding:2px;
 table.box-right{
 position:relative;
 top:50px;
-right: -1100px;
+right: -900px;
 color:white;
 border-width: medium;
 border-color: grey;
